[tool.poetry]
name = "email_host_lookup"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"] # Please replace with actual author if known
readme = "README.txt"

[tool.poetry.dependencies]
python = "^3.9" # Upgraded to support latest pytest

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
