[tool.poetry]
name = "email_host_lookup"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"] # Please replace with actual author if known
readme = "README.txt"

[tool.poetry.dependencies]
python = "^3.9" # Upgraded to support latest pytest
textual = "^0.70.0" # Added textual
dnspython = "^2.6.1" # Added dnspython

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.0"
taskipy = "^1.12.2"
pytest-asyncio = "^0.23.0" # Added pytest-asyncio

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.taskipy.tasks]
test = "pytest"
