[tool.poetry]
name = "email_host_lookup"
version = "0.1.0"
description = ""
authors = ["Takashi Sasaki <takashi316@gmail.com>"] # Please replace with actual author if known
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9" # Upgraded to support latest pytest
textual = "^0.70.0" # Added textual
dnspython = "^2.6.1" # Added dnspython

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.0"
pytest-asyncio = "^0.23.0" # Added pytest-asyncio

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"
